Some linking done in pages

--- a/views/layouts/home/sections/footer-links.ejs
+++ b/views/layouts/home/sections/footer-links.ejs
@@ -33,19 +33,19 @@
             </div>
             <ul class="text-white">
               <li class="mb-3 hover:text-red-400 hover:-translate-x-1 transform duration-200">
-                <a href="javascript:void(0)">Departments</a>
+                <a href="/departments">Departments</a>
               </li>
               <li class="mb-3 hover:text-red-400 hover:-translate-x-1 transform duration-200">
                 <a href="javascript:void(0)">Privacy Policy</a>
               </li>
               <li class="mb-3 hover:text-red-400 hover:-translate-x-1 transform duration-200">
-                <a href="javascript:void(0)">Register</a>
+                <a href="/staff-register">Register</a>
               </li>
               <li class="mb-3 hover:text-red-400 hover:-translate-x-1 transform duration-200">
                 <a href="javascript:void(0)">Terms of Service</a>
               </li>
               <li class="hover:text-red-400 hover:-translate-x-1 transform duration-200"><a
-                  href="javascript:void(0)">Login</a></li>
+                  href="/staff-login">Login</a></li>
             </ul>
           </div>
         </div>
@@ -56,10 +56,10 @@
             </div>
             <ul class="text-white">
               <li class="mb-3 hover:text-red-400 hover:-translate-x-1 transform  duration-200">
-                <a href="javascript:void(0)">Home</a>
+                <a href="/">Home</a>
               </li>
               <li class="mb-3 hover:text-red-400 hover:-translate-x-1 transform duration-200">
-                <a href="javascript:void(0)">Events</a>
+                <a href="/events">Events</a>
               </li>
               <li class="mb-3 hover:text-red-400 hover:-translate-x-1 transform duration-200">
                 <a href="javascript:void(0)">Testimonials</a>
