--- a/views/layouts/dashboard/sections/sidebar.ejs
+++ b/views/layouts/dashboard/sections/sidebar.ejs
@@ -51,7 +51,7 @@
                 <span class="ml-2 text-sm tracking-wide truncate">Messages</span>
               </a>
             </li>
-            <li>
+            <!-- <li>
               <a href="#"
                 class="relative flex flex-row items-center h-11 focus:outline-none duration-200 hover:bg-blue-800 dark:hover:bg-gray-600 text-white-600 hover:text-white-800 border-l-4 border-transparent hover:border-blue-500 dark:hover:border-gray-800 pr-6">
                 <span class="inline-flex justify-center items-center ml-4">
@@ -66,10 +66,10 @@
                 <span
                   class="hidden md:block px-2 py-0.5 ml-auto text-xs font-medium tracking-wide text-red-500 bg-red-50 rounded-full">1.2k</span>
               </a>
-            </li>
+            </li> -->
             <li>
-              <a href="#"
-                class="relative flex flex-row items-center h-11 focus:outline-none duration-200 hover:bg-blue-800 dark:hover:bg-gray-600 text-white-600 hover:text-white-800 border-l-4 border-transparent hover:border-blue-500 dark:hover:border-gray-800 pr-6">
+              <a href="/dashboard/events"
+                class="relative flex flex-row items-center h-11 focus:outline-none duration-200 hover:bg-blue-800 <%= title === "Dashboard | Events" ? "bg-blue-700" : "" %> dark:hover:bg-gray-600 text-white-600 hover:text-white-800 border-l-4 border-transparent hover:border-blue-500 dark:hover:border-gray-800 pr-6">
                 <span class="inline-flex justify-center items-center ml-4">
                   <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg">
