--- a/views/layouts/home/sections/event-registration.ejs
+++ b/views/layouts/home/sections/event-registration.ejs
@@ -22,7 +22,7 @@
           <input type="text" name="linkedin_account" placeholder="Your Linkedin Account Id"
             class="w-full relative py-4 pl-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none">
           <button
-            class="m-auto w-full h-10 text-lg relative right-0 px-5 font-semibold text-white duration-200 rounded-md hover:shadow-xl bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 overflow-hidden">Submit</button>
+           id="submitButton" onclick="modalFunction()" class="m-auto w-full h-10 text-lg relative right-0 px-5 font-semibold text-white duration-200 rounded-md hover:shadow-xl bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 overflow-hidden">Submit</button>
         </form>
       </div>
     </div>
