Modals Functionality completed for all present forms

--- a/views/layouts/home/partials/head-links.ejs
+++ b/views/layouts/home/partials/head-links.ejs
@@ -17,6 +17,8 @@
 
 <link rel="stylesheet" href="/css/custom-new.css">
 
+<link href="/css/tingle.css" rel="stylesheet">
+
 <link href="/css/styles.css" rel="stylesheet">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
