--- a/views/layouts/home/partials/scripts.ejs
+++ b/views/layouts/home/partials/scripts.ejs
@@ -8,6 +8,8 @@ crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script src="/js/modernizr-3.7.1.min.js"></script>
 
+<script src="/js/tingle.js"></script>
+
 <script src="/js/plugins.js"></script>
 
 <script src="/js/slick.min.js"></script>
