--- a/views/layouts/home/department_page.ejs
+++ b/views/layouts/home/department_page.ejs
@@ -44,6 +44,80 @@
   <!-- Scripts -->
   <%- include("./partials/scripts.ejs") %> 
   <!-- ./Scripts -->
+
+  <script>
+    // let foundEventName = document.querySelector("#testg1").innerHTML;
+    // console.log(foundEventName)
+    // console.log(`/events/${foundEventName}`)
+    function convertFD2JSON(formData) {
+            let obj = {};
+            formData.forEach(function(value, key) {
+                obj[key] = value;
+            })
+            return obj;
+        }
+        document.querySelector("form").addEventListener("submit", handleForm);
+        function handleForm(ev) {
+            ev.preventDefault();
+            let myForm = ev.target;
+            fetch("/departments/<%= foundDept.name %>/internship-register", {
+                body: JSON.stringify(convertFD2JSON(new FormData(myForm))),
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                }
+            })
+            .then((some) => { return some.json() })
+            .then(async (res) => {
+
+                  console.log(res)
+                  // instanciate new modal
+                  var modal = new tingle.modal({
+                      footer: true,
+                      stickyFooter: false,
+                      closeMethods: ['button', 'escape', 'overlay'],
+                      closeLabel: "Close",
+                      cssClass: ['custom-class-1', 'custom-class-2'],
+                  });
+  
+                  // set content
+                  modal.setContent( `<h1> ${res.message} </h1>` );
+      
+  
+                  // add button
+                  modal.addFooterBtn('close', 'tingle-btn tingle-btn--primary tingle-btn--pull-right', function() {
+                      // here goes some logic
+                      modal.close();
+                  });
+
+                  modal.open()
+                
+            })
+            .catch((err) => {
+                // instanciate new modal
+                var modal = new tingle.modal({
+                      footer: true,
+                      stickyFooter: false,
+                      closeMethods: ['button', 'escape'],
+                      closeLabel: "Close",
+                      cssClass: ['custom-class-1', 'custom-class-2'],
+                  });
+  
+                  // set content
+                  modal.setContent( `<h1> ${res.message} </h1>` );
+      
+  
+                  // add button
+                  modal.addFooterBtn('close', 'tingle-btn tingle-btn--dange tingle-btn--pull-right', function() {
+                      // here goes some logic
+                      modal.close();
+                  });
+
+                  modal.open()
+            })
+        }
+        
+  </script>    
 </body>
 
 </html>
