--- a/views/layouts/home/sections/event-registration.ejs
+++ b/views/layouts/home/sections/event-registration.ejs
@@ -11,7 +11,7 @@
     </div>
     <div class="w-full lg:w-1/2">
       <div id="event-registration" class="mt-8 subscribe-form">
-        <form action="/events/<%= foundEvent.name %>" method="POST" class="relativeb focus:outline-none space-y-5">
+        <form class="relative focus:outline-none space-y-5">
           <input type="text"
             class="w-full relative py-4 pl-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none"
             id="name" name="name" placeholder="Your Name">
@@ -22,6 +22,7 @@
           <input type="text" name="linkedin_account" placeholder="Your Linkedin Account Id"
             class="w-full relative py-4 pl-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none">
           <button
+            type="submit"
             class="m-auto w-full h-10 text-lg relative right-0 px-5 font-semibold text-white duration-200 rounded-md hover:shadow-xl bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 overflow-hidden">Submit</button>
         </form>
       </div>
