--- a/views/layouts/dashboard/sections/member-table.ejs
+++ b/views/layouts/dashboard/sections/member-table.ejs
@@ -1,6 +1,6 @@
 <div class="mt-4 mx-4">
   <div class="w-full overflow-hidden rounded-lg shadow-xs">
-    <% if(title==="Dashboard | Board" ) { %>
+    <% if(title === "Dashboard | Board" ) { %>
       <div class="w-full overflow-x-auto">
         <table class="w-full">
           <thead>
@@ -55,7 +55,8 @@
           </tbody>
         </table>
       </div>
-      <% } else if (title==="Dashboard | Events" ) { %>
+    <% } else if (title === "Dashboard | Events" ) { %>
+    <% if (events.length > 0) { %> 
       <div class="w-full overflow-x-auto">
         <table class="w-full">
           <thead>
@@ -116,17 +117,24 @@
           </tbody>
         </table>
       </div>
-      <% } else if (title === `Dashboard | Events | ${event.name} | Participants`) { %>
+    <% } else { %>
+      <div class="flex justify-center items-center">
+        <span class="text-2xl bg-indigo-600 p-3 rounded text-white">
+          No data available
+        </span>
+      </div>
+    <% } %> 
+    <% } else if (title === `Dashboard | Events | ${event.name} | Participants`) { %>
         <div class="w-full overflow-x-auto">
           <table class="w-full">
             <thead>
               <tr
                 class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800">
                 <th class="px-4 py-3">Participant Name</th>
-                <th class="px-4 py-3 text-center">Category</th>
-                <th class="px-4 py-3">Event Start</th>
-                <th class="px-4 py-3">Event End</th>
-                <th class="px-4 py-3">Organizers</th>
+                <th class="px-4 py-3">Email Address</th>
+                <th class="px-4 py-3">College Name</th>
+                <th class="px-4 py-3">LinkedIn Profile</th>
+                <th class="px-4 py-3">Events</th>
               </tr>
             </thead>
             <tbody class="bg-white divide-y dark:divide-gray-700 dark:bg-gray-800">
@@ -151,16 +159,16 @@
                 <td class="px-4 py-3 text-sm capitalize max-w-xs">
                   <%= participant.college_name %>
                 </td>
-                <td class="px-4 py-3 text-sm flex justify-center items-center">
-                  <% function isValidHttpUrl(string) { let url; try { url = new URL(string); } catch (_) { return false; } return url.protocol === "http:" || url.protocol === "https:"; } %> 
+                <td class="px-4 py-3 text-sm">
+                  <% function isValidHttpUrl(string) { let url; try { url = new URL(string); } catch (err) { return false; } return url.protocol === "http:" || url.protocol === "https:"; } %> 
                   <a href="<%= isValidHttpUrl(participant.linkedin_account) ? participant.linkedin_account : "javascript:void(0)" %>" target="blank">
                     <svg class="fill-current dark:text-white <%= isValidHttpUrl(participant.linkedin_account) ? "text-purple-500 dark:text-purple-300" : "text-red-500 dark:text-red-500" %>" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                       <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
                     </svg>
                   </a>
                 </td>
-                <td class="px-4 text-center font-bold dark:text-gray-200 py-3 text-sm">
-                  <a class="bg-indigo-600 text-center text-white p-2 rounded" href="/dashboard/events/<%= event.name %>/participants" target="blank">
+                <td class="px-4 font-bold dark:text-gray-200 py-3 text-sm">
+                  <a class="bg-indigo-600 text-center text-white p-2 rounded" href="/dashboard/participants/<%= participant.id %>" target="blank">
                     View (<%= participant.registered_events.length %>)
                   </a>
                 </td>
@@ -169,6 +177,8 @@
             </tbody>
           </table>
         </div>
-      <% } %> 
+    <% } else if (true) { %>
+        hello 
+    <% } %>
   </div>
 </div>
