--- a/views/layouts/home/departments_page.ejs
+++ b/views/layouts/home/departments_page.ejs
@@ -59,7 +59,7 @@
             })
             .then((some) => { return some.json() })
             .then(async (res) => {
-
+                  document.querySelector('form').reset();
                   console.log(res)
                   // instanciate new modal
                   var modal = new tingle.modal({
