--- a/views/layouts/home/home-new.ejs
+++ b/views/layouts/home/home-new.ejs
@@ -87,7 +87,7 @@
             })
             .then((some) => { return some.json() })
             .then(async (res) => {
-
+                  document.querySelector('form').reset();
                   console.log(res)
                   // instanciate new modal
                   var modal = new tingle.modal({
