--- a/public/css/custom-new.css
+++ b/public/css/custom-new.css
@@ -818,7 +818,7 @@ p {
   width: 2px;
   height: 100%;
   margin-left: -1px;
-  background: rgb(213, 213, 213);z
+  background: rgb(213, 213, 213);
   background: -moz-linear-gradient(
     top,
     rgba(213, 213, 213, 0) 0%,
