--- a/public/css/custom-new.css
+++ b/public/css/custom-new.css
@@ -1082,3 +1082,41 @@ p {
     text-align: left;
   }
 }
+
+.dashboard_forms{
+	max-width:500px;
+	padding:30px;
+	margin:40px auto;
+	background:lightgray;
+	border-radius: 10px;
+	-webkit-border-radius:10px;
+	-moz-border-radius: 10px;
+	box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.13);
+	-moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.13);
+	-webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.13);
+}
+.dashboard_forms .inner-wrap{
+	padding: 30px;
+	background:white;
+	border-radius: 6px;
+	margin-bottom: 15px;
+}
+.dashboard_forms .section{
+	font: normal 20px 'Bitter', serif;
+	color: #2A88AD;
+	margin-bottom: 5px;
+}
+.dashboard_forms .section span {
+	background: #2A88AD;
+	padding: 5px 10px 5px 10px;
+	position: absolute;
+	border-radius: 50%;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border: 4px solid #fff;
+	font-size: 14px;
+	margin-left: -45px;
+	color: #fff;
+	margin-top: -3px;
+}
+
