--- a/views/layouts/home/sections/collective-events.ejs
+++ b/views/layouts/home/sections/collective-events.ejs
@@ -17,6 +17,7 @@
       </div>
       <div class="mt-5 mx-5">
         <div class="grid gap-8 lg:grid-cols-2 sm:grid-cols-1 md:grid-cols-1">
+          <% for (const featuredEvent of featured ) { %> 
           <div
             class="p-4 layered-card border-2 border-transparent hover:border-purple-300 bg-white transition ease-in max-w-xl rounded flex justify-start md:flex-row flex-col gap-4">
             <img
@@ -27,19 +28,14 @@
             <div class="flex flex-col space-y-8">
               <div class="text-black mt-1 top-1 md:m-0">
                 <p class="text-3xl leading-5 font-medium">
-                  Event Name
+                  <%= featuredEvent.name %>
                 </p>
               </div>
               <div>
                 <div class="flex flex-row space-x-3">
                   <img src="https://img.icons8.com/plasticine/50/000000/calendar--v3.png" />
-                  <p class="text-lg mt-2 text-black font-medium">27th July 2021</p>
+                  <p class="text-lg mt-2 text-black font-medium"><%= moment(featuredEvent.event_starts).format("MMMM Do YYYY") %></p>
                 </div>
-                <div class="flex flex-row space-x-3 mt-1 ml-1">
-                  <img src="https://img.icons8.com/ultraviolet/40/000000/clock--v1.png" />
-                  <p class="text-lg mt-2 text-black font-medium">6:00 PM</p>
-                </div>
-
               </div>
               <div class="text-center mt-2">
                 <div class="text-left">
@@ -49,102 +45,7 @@
               </div>
             </div>
           </div>
-          <div
-            class="p-4 layered-card border-2 border-transparent hover:border-purple-300 bg-white transition ease-in max-w-xl rounded flex justify-start md:flex-row flex-col gap-4">
-            <img
-              src="https://images.pexels.com/photos/2774556/pexels-photo-2774556.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-              class="rounded bg-contain justify-center items-center my-auto md:w-auto md:max-h-40" />
-            <div class="relative">
-            </div>
-            <div class="flex flex-col space-y-8">
-              <div class="text-black mt-1 top-1 md:m-0">
-                <p class="text-3xl leading-5 font-medium">
-                  Event Name
-                </p>
-              </div>
-              <div>
-                <div class="flex flex-row space-x-3">
-                  <img src="https://img.icons8.com/plasticine/50/000000/calendar--v3.png" />
-                  <p class="text-lg mt-2 text-black font-medium">27th July 2021</p>
-                </div>
-                <div class="flex flex-row space-x-3 mt-1 ml-1">
-                  <img src="https://img.icons8.com/ultraviolet/40/000000/clock--v1.png" />
-                  <p class="text-lg mt-2 text-black font-medium">6:00 PM</p>
-                </div>
-
-              </div>
-              <div class="text-center mt-2">
-                <div class="text-left">
-                  <a href="javascript:void(0)"
-                    class="inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-3  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500">Register</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div
-            class="p-4 layered-card border-2 border-transparent hover:border-purple-300 bg-white transition ease-in max-w-xl rounded flex justify-start md:flex-row flex-col gap-4">
-            <img
-              src="https://images.pexels.com/photos/2774556/pexels-photo-2774556.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-              class="rounded bg-contain justify-center items-center my-auto md:w-auto md:max-h-40" />
-            <div class="relative">
-            </div>
-            <div class="flex flex-col space-y-8">
-              <div class="text-black mt-1 top-1 md:m-0">
-                <p class="text-3xl leading-5 font-medium">
-                  Event Name
-                </p>
-              </div>
-              <div>
-                <div class="flex flex-row space-x-3">
-                  <img src="https://img.icons8.com/plasticine/50/000000/calendar--v3.png" />
-                  <p class="text-lg mt-2 text-black font-medium">27th July 2021</p>
-                </div>
-                <div class="flex flex-row space-x-3 mt-1 ml-1">
-                  <img src="https://img.icons8.com/ultraviolet/40/000000/clock--v1.png" />
-                  <p class="text-lg mt-2 text-black font-medium">6:00 PM</p>
-                </div>
-
-              </div>
-              <div class="text-center mt-2">
-                <div class="text-left">
-                  <a href="javascript:void(0)"
-                    class="inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-3  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500">Register</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div
-            class="p-4 layered-card border-2 border-transparent hover:border-purple-300 bg-white transition ease-in max-w-xl rounded flex justify-start md:flex-row flex-col gap-4">
-            <img
-              src="https://images.pexels.com/photos/2774556/pexels-photo-2774556.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-              class="rounded bg-contain justify-center items-center my-auto md:w-auto md:max-h-40" />
-            <div class="relative">
-            </div>
-            <div class="flex flex-col space-y-8">
-              <div class="text-black mt-1 top-1 md:m-0">
-                <p class="text-3xl leading-5 font-medium">
-                  Event Name
-                </p>
-              </div>
-              <div>
-                <div class="flex flex-row space-x-3">
-                  <img src="https://img.icons8.com/plasticine/50/000000/calendar--v3.png" />
-                  <p class="text-lg mt-2 text-black font-medium">27th July 2021</p>
-                </div>
-                <div class="flex flex-row space-x-3 mt-1 ml-1">
-                  <img src="https://img.icons8.com/ultraviolet/40/000000/clock--v1.png" />
-                  <p class="text-lg mt-2 text-black font-medium">6:00 PM</p>
-                </div>
-
-              </div>
-              <div class="text-center mt-2">
-                <div class="text-left">
-                  <a href="javascript:void(0)"
-                    class="inline-block px-5 font-semibold text-white duration-200 rounded-lg hover:shadow-xl transform hover:-translate-y-px py-3  bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500">Register</a>
-                </div>
-              </div>
-            </div>
-          </div>
+          <% } %> 
         </div>
       </div>
     </div>
