--- a/views/layouts/dashboard/sections/sidebar.ejs
+++ b/views/layouts/dashboard/sections/sidebar.ejs
@@ -69,7 +69,7 @@
             </li> -->
             <li>
               <a href="/dashboard/events"
-                class="relative flex flex-row items-center h-11 focus:outline-none duration-200 hover:bg-blue-800 <%= title === "Dashboard | Events" ? "bg-blue-700" : "" %> dark:hover:bg-gray-600 text-white-600 hover:text-white-800 border-l-4 border-transparent hover:border-blue-500 dark:hover:border-gray-800 pr-6">
+                class="relative flex flex-row items-center h-11 focus:outline-none duration-200 hover:bg-blue-800 <%= title === "Dashboard | Events" || title.length > "Dashboard | Events".length && title.substring(0, "Dashboard | Events".length) === "Dashboard | Events" ? "bg-blue-700" : "" %> dark:hover:bg-gray-600 text-white-600 hover:text-white-800 border-l-4 border-transparent hover:border-blue-500 dark:hover:border-gray-800 pr-6">
                 <span class="inline-flex justify-center items-center ml-4">
                   <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg">
@@ -98,7 +98,7 @@
             <li>
             <li>
               <a href="/dashboard/participants"
-                class="relative flex flex-row items-center h-11 focus:outline-none duration-200 <%= title === "Dashboard | Participants" ? "bg-blue-700" : "" %> hover:bg-blue-800 dark:hover:bg-gray-600 text-white-600 hover:text-white-800 border-l-4 border-transparent hover:border-blue-500 dark:hover:border-gray-800 pr-6">
+                class="relative flex flex-row items-center h-11 focus:outline-none duration-200 <%= title === "Dashboard | Participants" || title.length > "Dashboard | Participants".length && title.substring(0, "Dashboard | Participants".length) === "Dashboard | Participants" ? "bg-blue-700" : "" %> hover:bg-blue-800 dark:hover:bg-gray-600 text-white-600 hover:text-white-800 border-l-4 border-transparent hover:border-blue-500 dark:hover:border-gray-800 pr-6">
                 <span class="inline-flex justify-center items-center ml-4">
                   <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg">
