Participant, subscribers, events, internship data made functional

--- a/views/layouts/dashboard/all-messages.ejs
+++ b/views/layouts/dashboard/all-messages.ejs
@@ -26,7 +26,7 @@
         <!-- ./Statistics Cards -->
 
         <!-- Recent Activities -->
-        <%- include("./sections/all-messages.ejs") %> 
+        <%- include("./sections/messages.ejs") %> 
         <!-- ./Recent Activities -->
 
         <!-- External resources -->
