--- a/views/layouts/dashboard/messages.ejs
+++ b/views/layouts/dashboard/messages.ejs
@@ -20,13 +20,12 @@
       <!-- ./Sidebar -->
 
       <div class="h-full ml-14 mt-14 mb-10 md:ml-64">
-
         <!-- Statistics Cards -->
         <%- include("./sections/stat-card.ejs") %> 
         <!-- ./Statistics Cards -->
 
         <!-- Recent Activities -->
-        <%- include("./sections/messages.ejs") %> 
+        <%- include("./sections/all-messages.ejs") %> 
         <!-- ./Recent Activities -->
 
         <!-- External resources -->
@@ -39,7 +38,6 @@
   <!-- Scripts -->
   <%- include("./sections/scripts.ejs") %>   
   <!-- ./Scripts -->
-
 </body>
 
 </html>
