--- a/views/layouts/dashboard/sections/member-table.ejs
+++ b/views/layouts/dashboard/sections/member-table.ejs
@@ -108,7 +108,7 @@
                   <% } %> 
                 </td>
                 <td class="px-4 text-center font-bold dark:text-gray-200 py-3 text-sm">
-                  <a class="bg-indigo-600 text-center text-white p-2 rounded" href="/dashboard/events/<%= event.name %>/participants" target="blank">
+                  <a class="bg-indigo-600 text-center text-white p-2 rounded" href="/dashboard/events/<%= event.name %>/participants">
                     View (<%= event.participants.length %>)
                   </a>
                 </td>
@@ -134,7 +134,7 @@
               <th class="px-4 py-3">Email Address</th>
               <th class="px-4 py-3">College Name</th>
               <th class="px-4 py-3">LinkedIn Profile</th>
-              <th class="px-4 py-3">Events</th>
+              <th class="px-10 py-3">Events</th>
             </tr>
           </thead>
           <tbody class="bg-white divide-y dark:divide-gray-700 dark:bg-gray-800">
@@ -168,7 +168,7 @@
               </a>
             </td>
             <td class="px-4 font-bold dark:text-gray-200 py-3 text-sm">
-              <a class="bg-indigo-600 text-center text-white p-2 rounded" href="/dashboard/participants/<%= participant.id %>" target="blank">
+              <a class="bg-indigo-600 text-center text-white p-2 rounded" href="/dashboard/participants/<%= participant.id %>">
                 View (<%= participant.registered_events.length %>)
               </a>
             </td>
@@ -187,7 +187,7 @@
               <th class="px-4 py-3">Email Address</th>
               <th class="px-4 py-3">College Name</th>
               <th class="px-4 py-3">LinkedIn Profile</th>
-              <th class="px-4 py-3">Events</th>
+              <th class="px-10 py-3">Events</th>
             </tr>
           </thead>
           <tbody class="bg-white divide-y dark:divide-gray-700 dark:bg-gray-800">
@@ -221,8 +221,8 @@
                   </svg>
                 </a>
               </td>
-              <td class="px-4 font-bold dark:text-gray-200 py-3 text-sm">
-                <a class="bg-indigo-600 text-center text-white p-2 rounded" href="/dashboard/participants/<%= participant.id %>" target="blank">
+              <td class="px-4 font-bold dark:text-gray-200 py-3 text-sm w-full">
+                <a class="bg-indigo-600 text-center text-white w-full p-2 rounded" href="/dashboard/participants/<%= participant.id %>">
                   View (<%= participant.registered_events.length %>)
                 </a>
               </td>
@@ -290,7 +290,7 @@
                 <% } %> 
               </td>
               <td class="px-4 text-center font-bold dark:text-gray-200 py-3 text-sm">
-                <a class="bg-indigo-600 text-center text-white p-2 rounded" href="/dashboard/events/<%= event.name %>/participants" target="blank">
+                <a class="bg-indigo-600 text-center text-white p-2 rounded" href="/dashboard/events/<%= event.name %>/participants">
                   View (<%= event.participants.length %>)
                 </a>
               </td>
