--- a/views/layouts/dashboard/sections/messages.ejs
+++ b/views/layouts/dashboard/sections/messages.ejs
@@ -83,7 +83,7 @@
                   </div>
                   <div
                     class="flex-grow flex items-center border-b border-gray-100 dark:border-gray-400 text-sm text-gray-600 dark:text-gray-100 py-2">
-                    <div class="flex-grow flex-col md:flex justify-between items-center">
+                    <div class="flex-grow flex-row md:flex justify-between items-center">
                       <div class="self-center">
                         <span
                           class="font-medium text-gray-800 hover:text-gray-900 dark:text-gray-50 dark:hover:text-gray-100"
@@ -144,7 +144,7 @@
                 </div>
                 <div
                   class="flex-grow flex items-center border-b border-gray-100 dark:border-gray-400 text-sm text-gray-600 dark:text-gray-100 py-2">
-                  <div class="flex-grow flex-col md:flex justify-between items-center">
+                  <div class="flex-grow flex-row md:flex justify-between items-center">
                     <div class="self-center">
                       <span
                         class="font-medium text-gray-800 hover:text-gray-900 dark:text-gray-50 dark:hover:text-gray-100"
@@ -201,8 +201,8 @@
                 </svg>
               </div>
               <div
-                class="flex-grow flex-col md:flex items-center border-b border-gray-100 dark:border-gray-400 text-sm text-gray-600 dark:text-gray-100 py-2">
-                <div class="flex-grow flex justify-between items-center">
+                class="flex-grow flex items-center border-b border-gray-100 dark:border-gray-400 text-sm text-gray-600 dark:text-gray-100 py-2">
+                <div class="flex-grow flex-row md:flex justify-between items-center">
                   <div class="self-center">
                     <span
                       class="font-medium text-gray-800 hover:text-gray-900 dark:text-gray-50 dark:hover:text-gray-100"
@@ -214,7 +214,7 @@
                       <%= internshipMessage.email %>
                     </a>
                   </div>
-                  <div class="flex-shrink-0 ml-2">
+                  <div class="flex-shrink-0 ml-2 mt-5 md:mt-0">
                     <a class="flex items-center font-medium text-blue-500 hover:text-blue-600 dark:text-blue-400 dark:hover:text-blue-500"
                       href="/dashboard/internship-applications/<%= internshipMessage.id %>" style="outline: none;">
                       View
