Responsive and spacing issues fixed in the dashboard - #2

--- a/views/layouts/dashboard/sections/member-table.ejs
+++ b/views/layouts/dashboard/sections/member-table.ejs
@@ -187,7 +187,7 @@
               <th class="px-4 py-3">Email Address</th>
               <th class="px-4 py-3">College Name</th>
               <th class="px-4 py-3">LinkedIn Profile</th>
-              <th class="px-10 py-3">Events</th>
+              <th class="px-10 lg:px-4 py-3">Events</th>
             </tr>
           </thead>
           <tbody class="bg-white divide-y dark:divide-gray-700 dark:bg-gray-800">
@@ -221,7 +221,7 @@
                   </svg>
                 </a>
               </td>
-              <td class="px-4 font-bold dark:text-gray-200 py-3 text-sm w-full">
+              <td class="px-4 font-bold dark:text-gray-200 py-3 text-sm">
                 <a class="bg-indigo-600 text-center text-white w-full p-2 rounded" href="/dashboard/participants/<%= participant.id %>">
                   View (<%= participant.registered_events.length %>)
                 </a>
