Changes in the staff register department options

--- a/views/layouts/auth/staff-register.ejs
+++ b/views/layouts/auth/staff-register.ejs
@@ -78,15 +78,15 @@
                                         focus:outline-none
                                         focus:bg-white" required name="department">
                                         <option value="">Seleted Department</option>
-                                        <option value="Department - 1">Department - 1</option>
-                                        <option value="Department - 2">Department - 2</option>
-                                        <option value="Department - 3">Department - 3</option>
-                                        <option value="Department - 4">Department - 4</option>
-                                        <option value="Department - 5">Department - 5</option>
-                                        <option value="Department - 6">Department - 6</option>
-                                        <option value="Department - 7">Department - 7</option>
-                                        <option value="Department - 8">Department - 8</option>
-                                        <option value="Department - 9">Department - 9</option>
+                                        <option value="Technical Department">Technical Department</option>
+                                        <option value="Analytical Research Department">Analytical Research Department</option>
+                                        <option value="Creative Desining Department - 3">Creative Desining Department - 3</option>
+                                        <option value="Content Writing Department">Content Writing Department</option>
+                                        <option value="Database Management Department">Database Management Department</option>
+                                        <option value="Event Management Department">Event Management Department</option>
+                                        <option value="Public Relation Department">Public Relation Department</option>
+                                        <option value="Strategic Planning Department">Strategic Planning Department</option>
+                                        <option value="Social Media Marketing Department">Social Media Marketing Department</option>
                                     </select>
                                     <p class="text-sm text-red-900 hidden mt-3" id="error">Please fill all the required
                                         fields.
