--- a/views/layouts/dashboard/sections/member-table.ejs
+++ b/views/layouts/dashboard/sections/member-table.ejs
@@ -20,7 +20,7 @@
                 <td class="px-4 py-3">
                   <div class="flex items-center text-sm">
                     <div class="relative hidden w-8 h-8 mr-3 rounded-full md:block">
-                      <img class="object-cover w-full h-full rounded-full" src="<%= member.profile_pic_url %>" alt=""
+                      <img class="object-fit rounded-full" src="<%= member.profile_pic_url %>" alt=""
                         loading="lazy" />
                       <div class="absolute inset-0 rounded-full shadow-inner" aria-hidden="true">
                       </div>
